implemented cognito and authorized with api gateway using cdk

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@ __pycache__
 .cdk.staging
 cdk.out
 
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
