--- a/serverless-delivery-microservices-cdk-app/ws-serverless-patterns/package.json
+++ b/serverless-delivery-microservices-cdk-app/ws-serverless-patterns/package.json
@@ -9,18 +9,32 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "jest --config ./jest.config.js",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
+    "@aws-sdk/client-cloudformation": "^3.891.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.891.0",
+    "@aws-sdk/client-secrets-manager": "^3.891.0",
+    "@aws-sdk/lib-dynamodb": "^3.891.0",
+    "@babel/preset-env": "^7.28.3",
+    "@faker-js/faker": "^9.9.0",
+    "@types/aws-lambda": "^8.10.152",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.16.1",
+    "@types/uuid": "^10.0.0",
     "aws-cdk": "2.86.0",
+    "aws-sdk-client-mock": "^4.1.0",
+    "axios": "^1.12.2",
+    "babel-jest": "^30.1.2",
     "esbuild": "^0.25.10",
-    "jest": "^29.6.1",
-    "ts-jest": "^29.1.0",
+    "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "npm": "^11.6.0",
+    "ts-jest": "^29.4.3",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "uuid": "^13.0.0"
   },
   "dependencies": {
     "aws-cdk-lib": "^2.215.0",
